--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,41 +14,47 @@ html {
 body {
   font-family: 'Ubuntu', sans-serif; }
 
-.app {
-  color: #fff;
-  min-height: 100vh;
-  line-height: 1.4em;
-  background-color: #f7f7f7;
+.point {
+  width: 20px;
+  height: 20px;
+  background-color: #000;
+  border-radius: 50%;
+  align-self: center;
+  justify-self: center; }
+
+.dice {
+  width: 120px;
+  height: 120px;
+  border: 1px solid #375a7f;
   display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: repeat(4, auto);
-  grid-template-areas: 'header' 'navigation' 'main' 'aside' 'footer'; }
-  .app__header {
-    background-color: #375a7f;
-    grid-area: header; }
-  .app__aside {
-    background-color: #6a99cb;
-    grid-area: aside; }
-  .app__nav {
-    background-color: #fcfa70;
-    grid-area: navigation; }
-  .app__main {
-    background-color: #f7f7f7;
-    color: #000;
-    grid-area: main; }
-  .app__footer {
-    background-color: #fcfa70;
-    color: #000;
-    grid-area: footer; }
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr); }
 
-.app > * {
-  padding: 1rem; }
+.p1 {
+  grid-area: 1 / 1; }
 
-@media screen and (min-width: 64em) {
-  .app {
-    display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    grid-template-rows: repeat(4, auto);
-    grid-template-areas: 'header header header'  'navigation main aside'  '. main .'  'footer footer footer'; } }
+.p2 {
+  grid-area: 1 / 2; }
+
+.p3 {
+  grid-area: 1 / 3; }
+
+.p4 {
+  grid-area: 2 / 1; }
+
+.p5 {
+  grid-area: 2 / 2; }
+
+.p6 {
+  grid-area: 2 / 3; }
+
+.p7 {
+  grid-area: 3 / 1; }
+
+.p8 {
+  grid-area: 3 / 2; }
+
+.p9 {
+  grid-area: 3 / 3; }
 
 /*# sourceMappingURL=style.css.map */
