--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,78 +9,58 @@ $white: #fff;
 $base: #f7f7f7;
 $black: #000;
 
-.app{
-    color: $white;
-    min-height: 100vh;
-    line-height: 1.4em;
-    background-color: $base;
+.point{
+    width: 20px;
+    height: 20px;
+    background-color: $black;
+    border-radius: 50%;
+    align-self: center;
+    justify-self: center;
+}
 
+.dice{
+    width: 120px;
+    height: 120px;
+    border: 1px solid $strongBlue;
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(4, auto);
-    //If you don't put the names between a '' mark the grid will be in the same row
-    //Template area is used to define specific areas
-    grid-template-areas: 'header' 'navigation' 'main' 'aside' 'footer';
-
-    &__header{
-        background-color: $strongBlue;
-        //grid-area specify the area of the element, this is according the areas defined before
-        grid-area: header;        
-    }
-
-    &__aside{
-        background-color: $lightBlue;
-        grid-area: aside;
-    }
-
-    &__nav{
-        background-color: $yellow;
-        grid-area: navigation;
-    }
-
-    
-    &__main{
-        background-color: $base;
-        color: $black;
-        grid-area: main;
-    }
-
-    &__footer{
-        background-color: $yellow;
-        color: $black;
-        grid-area: footer;
-    }
-
-    &__items{
-
-    }
-
-    &__item{
-
-    }
-
-
-    &__title{
-
-    }
-
-    &__text{
-
-    }
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
 }
 
-.app > * {
-    padding: 1rem;
+//Mapping the points
+
+.p1{
+    grid-area: 1 / 1;
 }
 
-@media screen and (min-width: 64em){
-    .app{
-        display: grid;
-        grid-template-columns: 1fr 4fr 1fr;
-        grid-template-rows: repeat(4, auto);
-        grid-template-areas: 'header header header' 
-                            'navigation main aside' 
-                            '. main .' 
-                            'footer footer footer';
-    }
+.p2{
+    grid-area: 1 / 2;
+}
+
+.p3{
+    grid-area: 1 / 3;
+}
+
+.p4{
+    grid-area: 2 / 1;
+}
+
+.p5{
+    grid-area: 2 / 2;
+}
+
+.p6{
+    grid-area: 2 / 3;
+}
+
+.p7{
+    grid-area: 3 / 1;
+}
+
+.p8{
+    grid-area: 3 / 2;
+}
+
+.p9{
+    grid-area: 3 / 3;
 }
