--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,47 +14,74 @@ html {
 body {
   font-family: 'Ubuntu', sans-serif; }
 
-.point {
-  width: 20px;
-  height: 20px;
-  background-color: #000;
-  border-radius: 50%;
-  align-self: center;
-  justify-self: center; }
-
-.dice {
-  width: 120px;
-  height: 120px;
-  border: 1px solid #375a7f;
+.app {
+  color: #fffbff;
+  min-height: 100vh;
+  line-height: 1.4em;
+  background-color: #f7f7f7;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr); }
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(4, auto);
+  grid-template-areas: 'header' 'navigation' 'main' 'aside' 'footer'; }
+  .app__header {
+    background-color: #17bebb;
+    grid-area: header; }
+  .app__aside {
+    background-color: #ef3e36;
+    grid-area: aside; }
+  .app__nav {
+    background-color: #ef3e36;
+    grid-area: navigation;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    transition: transform .3s ease-in-out;
+    transform: translateX(-100%); }
+  .app__nav:target {
+    transform: translate(0); }
+  .app__main {
+    background-color: #f7f7f7;
+    color: #2e282a;
+    grid-area: main; }
+  .app__footer {
+    background-color: #17bebb;
+    color: #fffbff;
+    grid-area: footer; }
 
-.p1 {
-  grid-area: 1 / 1; }
+.app > * {
+  padding: 1rem; }
 
-.p2 {
-  grid-area: 1 / 2; }
+.close {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  font-stretch: wider;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  border-radius: 50%;
+  color: #2e282a;
+  background-color: #fffbff; }
 
-.p3 {
-  grid-area: 1 / 3; }
+@media screen and (min-width: 64em) {
+  .app {
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: repeat(4, auto);
+    grid-template-areas: 'header header header'  'navigation navigation navigation'  'main main aside'  'footer footer footer'; }
+    .app__nav {
+      position: static;
+      transform: translate(0, 0);
+      background-color: rgba(23, 190, 187, 0.5); }
+      .app__nav li {
+        display: inline;
+        padding: 1rem; }
 
-.p4 {
-  grid-area: 2 / 1; }
-
-.p5 {
-  grid-area: 2 / 2; }
-
-.p6 {
-  grid-area: 2 / 3; }
-
-.p7 {
-  grid-area: 3 / 1; }
-
-.p8 {
-  grid-area: 3 / 2; }
-
-.p9 {
-  grid-area: 3 / 3; }
+  .toggle {
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
