Practice 22 - CSS Grid | Grid Placement

--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -1,7 +1,6 @@
 // Reset 
 html{
     box-sizing: border-box;
-    font-family: sans-serif;
     font-size: 16px;
 }
 
@@ -20,4 +19,5 @@ html{
 body{
     // font-family: 'Oswald', sans-serif;
     font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
 }
