--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu:200,400:700");
 html {
   box-sizing: border-box;
-  font-family: sans-serif;
   font-size: 16px; }
 
 *,
@@ -12,45 +11,134 @@ html {
   box-sizing: inherit; }
 
 body {
-  font-family: 'Ubuntu', sans-serif; }
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: bold; }
 
-body {
-  min-height: 100vh;
-  display: flex;
-  background: linear-gradient(-45deg, #ff0080, #ff8000); }
-
-.calendar {
-  width: 90%;
+/*
+grid-template-columns: define the number of columns in the grid
+grid-template-rows: define the number of rows in the grid
+grid-template-area: name the areas of the grid
+*/
+.history {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(13, minmax(1rem, 4rem));
+  grid-auto-flow: row dense;
+  grid-gap: 1vw;
+  max-width: 1200px;
   margin: auto;
-  max-width: 500px;
-  color: #fff;
-  /*In case that the first day of a month doesn't start in Sunday 
-  just replace the number for the number of the day when the month starts
-  */ }
-  .calendar__header {
-    background-color: rgba(0, 0, 0, 0.3); }
-  .calendar__week, .calendar__dates {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-gap: 4px; }
-  .calendar__month {
-    text-align: center;
-    line-height: 1;
-    font-size: 2em; }
-    .calendar__month::after, .calendar__month::before {
-      text-align: center; }
-    .calendar__month::after {
-      content: ">"; }
-    .calendar__month::before {
-      content: "<"; }
-  .calendar__week {
-    background-color: rgba(0, 0, 0, 0.3); }
-  .calendar__item {
-    line-height: 2;
-    text-align: center; }
-  .calendar__date {
-    background-color: rgba(255, 255, 255, 0.2); }
-  .calendar__date:first-child {
-    grid-column: 4; }
+    /*
+DRY - Row x Columns
+1x1
+1x2
+1x3
+2x1
+2x2
+*/ }
+  .history__item {
+    background-color: #00aeef;
+    border: medium solid #2e282a;
+    color: #fffbff;
+    padding: 2rem;
+    font-size: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+        /*
+        
+        => This is useless
+
+        &:nth-of-type(1){
+            grid-row: span 1;
+            grid-column: span 1;
+        }
+        &:nth-of-type(2){
+            grid-row: span 1;
+            grid-column: span 2;
+        }
+        &:nth-of-type(3){
+            grid-row: span 2;
+            grid-column: span 2;
+        }
+        &:nth-of-type(4){
+            grid-row: span 1;
+            grid-column: span 3;
+        }
+        &:nth-of-type(5), &:nth-of-type(6), &:nth-of-type(7){
+            grid-row: span 1;
+            grid-column: span 1;
+        }
+        &:nth-of-type(8){
+            grid-row: span 1;
+            grid-column: span 2;
+        }
+        &:nth-of-type(9){
+            grid-row: span 2;
+            grid-column: span 1;
+        }
+        &:nth-of-type(10){
+            grid-row: span 2;
+            grid-column: span 2;
+        }
+        &:nth-of-type(11){
+            grid-row: span 2;
+            grid-column: span 2;
+        }
+        &:nth-of-type(12){
+            grid-row: span 2;
+            grid-column: span 2;
+        }
+        &:nth-of-type(13), &:nth-last-of-type(14), &:nth-last-of-type(15){
+            grid-row: span 1;
+            grid-column: span 3;
+        }
+        &:nth-of-type(16){
+            grid-row: span 2;
+            grid-column: span 1;
+        }
+        &:nth-of-type(17){
+            grid-row: span 2;
+            grid-column: span 2;
+        }
+        &:nth-of-type(18){
+            grid-row: span 1;
+            grid-column: span 1;
+        }
+        &:nth-of-type(19){
+            grid-row: span 1;
+            grid-column: span 2;
+        }
+        &:nth-of-type(20){
+            grid-row: span 2;
+            grid-column: span 1;
+        }
+        &:nth-of-type(21){
+            grid-row: span 2;
+            grid-column: span 2;
+        }
+        &:nth-of-type(22){
+            grid-row: span 1;
+            grid-column: span 2;
+        }
+        &:nth-of-type(23){
+            grid-row: span 1;
+            grid-column: span 1;
+        }
+        */ }
+  .history .r1c1 {
+    grid-row: span 1;
+    grid-column: span 1; }
+  .history .r1c2 {
+    grid-row: span 1;
+    grid-column: span 2; }
+  .history .r1c3 {
+    grid-row: span 1;
+    grid-column: span 3; }
+  .history .r2c1 {
+    grid-row: span 2;
+    grid-column: span 1; }
+  .history .r2c2 {
+    grid-row: span 2;
+    grid-column: span 2; }
 
 /*# sourceMappingURL=style.css.map */
