--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,37 +1,82 @@
 @import "reset";
 
-//Colors
-$aqua: #b4d4ee;
-$manatee: #9993b2;
+$almond: #fcecc9;
+$melon: #fcb0b3;
+$salsa: #f93943;
+$blue: #7eb2dd;
+$queen: #445e93;
 $white: #f7f7f7;
+.collage {
+    min-height: 100vh;
+    display:grid;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(7, auto);
+  }
+  
+  .collage img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .collage__title { order: 0; }
+  
+  .collage__text__top { order: 1; }
+  
+  .collage__text__middle { order: 3; }
+  
+  .collage__text__bottom { order: 5; }
+  
+  .collage__image__top { order: -1; }
+  
+  .collage__image__middle { order: 2; }
+  
+  .collage__image__bottom { order: 4; }
+  
+  @media screen and (min-width: 64em) {
+    .collage {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(8, minmax(1rem, fit-content));
 
-.grid{
-    display: grid;
-    grid-template-columns: repeat(6, 70px);
-    grid-auto-columns: 70px;
-    grid-auto-rows: 70px;
-    grid-gap: 5px;
-    grid-auto-flow: row dense;
-
-    /*
-    => This might be a must!
-    grid-auto-rows: 50px; //define the size of any new element generated
-    grid-auto-columns: 50px; //define the size of any new element generated 
-    >> You never know when a new element might be added to the grid
-    */
-
-    &__item{
-        @include total_center;
-        background-color: $manatee;
-        color: $white;     
-        
-        &:nth-child(9){
-            grid-column: span 2;
-            grid-row: span 2;
+      &__title{
+        background-color: #DDD;
+        grid-column: 1 / 2;
+        grid-row: 1 / 9;
+      }
+      &__text{
+        &__top{
+        background-color: #BBB;
+        grid-column: 2 / 6;
+        grid-row: 1 / 3;
         }
-        &:nth-child(13){
-            grid-column: span 3;
-            grid-row: span 2;
+        &__middle {
+        background-color: #888;
+        grid-column: 2 / 4;
+        grid-row: 4 / 6;
         }
+        &__bottom {
+        background-color: #555;
+        grid-column: 2 / 6;
+        grid-row: 7 / 9;
+        }
+      }
+      &__image{
+        &__top {
+            background-color: #222;
+            grid-column: 5 / 7;
+            grid-row: 3 / 5;
+        }
+        &__middle {
+            z-index: 1;
+            opacity: .75;
+            background-color: #CCC;
+            grid-column: 4 / 6;
+            grid-row: 4 / 6;
+        }
+        &__bottom {
+            background-color: #999;
+            grid-column: 5 / 7;
+            grid-row: 5 / 7;
+          }
+      }
     }
-}
+  }
