--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,70 +14,53 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold; }
 
-.collage {
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: repeat(7, auto); }
+body {
+  display: flex;
+  flex-wrap: wrap; }
 
-.collage img {
-  max-width: 100%;
-  height: auto; }
+header {
+  background: pink;
+  width: 100%;
+  height: 64px; }
 
-.collage__title {
-  order: 0; }
+main, aside {
+  min-height: 300px; }
 
-.collage__text__top {
-  order: 1; }
+main {
+  background: yellow;
+  width: 75%; }
 
-.collage__text__middle {
-  order: 3; }
+aside {
+  background: red;
+  width: 25%; }
 
-.collage__text__bottom {
-  order: 5; }
+footer {
+  background: lime;
+  width: 100%;
+  height: 64px; }
 
-.collage__image__top {
-  order: -1; }
+@supports (grid-template-areas: "header") {
+  body {
+    display: grid;
+    grid-template-areas: "header header" "main aside" "footer footer";
+    grid-template-columns: 75% 25%;
+    grid-template-rows: 64px 1fr 64px;
+    min-height: 100vh; }
 
-.collage__image__middle {
-  order: 2; }
+  header {
+    grid-area: header; }
 
-.collage__image__bottom {
-  order: 4; }
+  main {
+    grid-area: main;
+    background: magenta; }
 
-@media screen and (min-width: 64em) {
-  .collage {
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(8, minmax(1rem, fit-content)); }
-    .collage__title {
-      background-color: #DDD;
-      grid-column: 1 / 2;
-      grid-row: 1 / 9; }
-    .collage__text__top {
-      background-color: #BBB;
-      grid-column: 2 / 6;
-      grid-row: 1 / 3; }
-    .collage__text__middle {
-      background-color: #888;
-      grid-column: 2 / 4;
-      grid-row: 4 / 6; }
-    .collage__text__bottom {
-      background-color: #555;
-      grid-column: 2 / 6;
-      grid-row: 7 / 9; }
-    .collage__image__top {
-      background-color: #222;
-      grid-column: 5 / 7;
-      grid-row: 3 / 5; }
-    .collage__image__middle {
-      z-index: 1;
-      opacity: .75;
-      background-color: #CCC;
-      grid-column: 4 / 6;
-      grid-row: 4 / 6; }
-    .collage__image__bottom {
-      background-color: #999;
-      grid-column: 5 / 7;
-      grid-row: 5 / 7; } }
+  aside {
+    grid-area: aside; }
+
+  main, aside {
+    width: 100%; }
+
+  footer {
+    grid-area: footer; } }
 
 /*# sourceMappingURL=style.css.map */
