--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,77 +6,67 @@ $salsa: #f93943;
 $blue: #7eb2dd;
 $queen: #445e93;
 $white: #f7f7f7;
-.collage {
-    min-height: 100vh;
-    display:grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(7, auto);
-  }
-  
-  .collage img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .collage__title { order: 0; }
-  
-  .collage__text__top { order: 1; }
-  
-  .collage__text__middle { order: 3; }
-  
-  .collage__text__bottom { order: 5; }
-  
-  .collage__image__top { order: -1; }
-  
-  .collage__image__middle { order: 2; }
-  
-  .collage__image__bottom { order: 4; }
-  
-  @media screen and (min-width: 64em) {
-    .collage {
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: repeat(8, minmax(1rem, fit-content));
 
-      &__title{
-        background-color: #DDD;
-        grid-column: 1 / 2;
-        grid-row: 1 / 9;
-      }
-      &__text{
-        &__top{
-        background-color: #BBB;
-        grid-column: 2 / 6;
-        grid-row: 1 / 3;
-        }
-        &__middle {
-        background-color: #888;
-        grid-column: 2 / 4;
-        grid-row: 4 / 6;
-        }
-        &__bottom {
-        background-color: #555;
-        grid-column: 2 / 6;
-        grid-row: 7 / 9;
-        }
-      }
-      &__image{
-        &__top {
-            background-color: #222;
-            grid-column: 5 / 7;
-            grid-row: 3 / 5;
-        }
-        &__middle {
-            z-index: 1;
-            opacity: .75;
-            background-color: #CCC;
-            grid-column: 4 / 6;
-            grid-row: 4 / 6;
-        }
-        &__bottom {
-            background-color: #999;
-            grid-column: 5 / 7;
-            grid-row: 5 / 7;
-          }
-      }
+body {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+header {
+    background: pink;
+    width: 100%;
+    height: 64px;
+}
+
+main, aside {
+    min-height: 300px;
+}
+
+main {
+    background: yellow;
+    width: 75%;
+}
+
+aside {
+    background: red;
+    width: 25%;
+}
+
+footer {
+    background: lime;
+    width: 100%;
+    height: 64px;
+}
+
+@supports (grid-template-areas: "header"){
+    body {
+        display: grid;
+        grid-template-areas: "header header"
+        "main aside"
+        "footer footer";
+        grid-template-columns: 75% 25%;
+        grid-template-rows: 64px 1fr 64px;
+        min-height : 100vh;
     }
-  }
+
+    header {
+        grid-area: header;
+    }
+
+    main {
+        grid-area: main;
+        background: magenta;
+    }
+
+    aside {
+        grid-area: aside;
+    }
+
+    main, aside {
+        width: 100%;
+    }
+
+    footer {
+        grid-area: footer;
+    }
+}
