--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,51 +16,48 @@ body {
 
 body {
   display: flex;
-  flex-wrap: wrap; }
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
 
-header {
-  background: pink;
-  width: 100%;
-  height: 64px; }
+.WindowGallery {
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 25vw);
+  grid-template-rows: repeat(4, 25vw); }
 
-main, aside {
-  min-height: 300px; }
+.WindowGallery-title {
+  z-index: 1;
+  grid-row: 2 / 4;
+  grid-column: 2 / 4;
+  font-size: 2.5vw;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
-main {
-  background: yellow;
-  width: 75%; }
+.WindowGallery-item {
+  overflow: hidden; }
 
-aside {
-  background: red;
-  width: 25%; }
+.WindowGallery-item:nth-of-type(1) {
+  grid-row: 1 / 3;
+  grid-column: 1 / 3; }
 
-footer {
-  background: lime;
-  width: 100%;
-  height: 64px; }
+.WindowGallery-item:nth-of-type(2) {
+  grid-row: 1 / 3;
+  grid-column: 3 / 5; }
 
-@supports (grid-template-areas: "header") {
-  body {
-    display: grid;
-    grid-template-areas: "header header" "main aside" "footer footer";
-    grid-template-columns: 75% 25%;
-    grid-template-rows: 64px 1fr 64px;
-    min-height: 100vh; }
+.WindowGallery-item:nth-of-type(3) {
+  grid-row: 3 / 5;
+  grid-column: 1 / 3; }
 
-  header {
-    grid-area: header; }
+.WindowGallery-item:nth-of-type(4) {
+  grid-row: 3 / 5;
+  grid-column: 3 / 5; }
 
-  main {
-    grid-area: main;
-    background: magenta; }
-
-  aside {
-    grid-area: aside; }
-
-  main, aside {
-    width: 100%; }
-
-  footer {
-    grid-area: footer; } }
+@media screen and (min-width: 64em) {
+  .WindowGallery {
+    grid-template-columns: repeat(4, 12.5vw);
+    grid-template-rows: repeat(4, 12.5vw); } }
 
 /*# sourceMappingURL=style.css.map */
