--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,72 +1,55 @@
 @import "reset";
 
-$almond: #fcecc9;
-$melon: #fcb0b3;
-$salsa: #f93943;
-$blue: #7eb2dd;
-$queen: #445e93;
-$white: #f7f7f7;
-
 body {
     display: flex;
-    flex-wrap: wrap;
-}
-
-header {
-    background: pink;
-    width: 100%;
-    height: 64px;
-}
-
-main, aside {
-    min-height: 300px;
-}
-
-main {
-    background: yellow;
-    width: 75%;
-}
-
-aside {
-    background: red;
-    width: 25%;
-}
-
-footer {
-    background: lime;
-    width: 100%;
-    height: 64px;
-}
-
-@supports (grid-template-areas: "header"){
-    body {
-        display: grid;
-        grid-template-areas: "header header"
-        "main aside"
-        "footer footer";
-        grid-template-columns: 75% 25%;
-        grid-template-rows: 64px 1fr 64px;
-        min-height : 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .WindowGallery {
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 25vw);
+    grid-template-rows: repeat(4, 25vw);
+  }
+  
+  .WindowGallery-title {
+    z-index: 1;
+    grid-row: 2 / 4;
+    grid-column: 2 / 4;
+    font-size: 2.5vw;
+    background-color: rgba(255, 255, 255, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .WindowGallery-item { overflow: hidden; }
+  
+  .WindowGallery-item:nth-of-type(1) {
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
+  }
+  
+  .WindowGallery-item:nth-of-type(2) {
+    grid-row: 1 / 3;
+    grid-column: 3 / 5;
+  }
+  
+  .WindowGallery-item:nth-of-type(3) {
+    grid-row: 3 / 5;
+    grid-column: 1 / 3;
+  }
+  
+  .WindowGallery-item:nth-of-type(4) {
+    grid-row: 3 / 5;
+    grid-column: 3 / 5;
+  }
+  
+  @media screen and (min-width: 64em) {
+    .WindowGallery {
+      grid-template-columns: repeat(4, 12.5vw);
+      grid-template-rows: repeat(4, 12.5vw);
     }
-
-    header {
-        grid-area: header;
-    }
-
-    main {
-        grid-area: main;
-        background: magenta;
-    }
-
-    aside {
-        grid-area: aside;
-    }
-
-    main, aside {
-        width: 100%;
-    }
-
-    footer {
-        grid-area: footer;
-    }
-}
+  }
